--- a/css/webflow.css
+++ b/css/webflow.css
@@ -311,6 +311,12 @@ input[type="reset"] {
   text-align: center;
   background-color: #dddddd;
 }
+.done {
+  display: none;
+  padding: 20px;
+  text-align: center;
+  background-color: #dddddd;
+}
 .w-form-fail {
   display: none;
   margin-top: 10px;
