--- a/css/webflow.css
+++ b/css/webflow.css
@@ -305,19 +305,7 @@ input[type="reset"] {
 .w-form {
   margin: 0 0 15px;
 }
-.w-form-done {
-  display: none;
-  padding: 20px;
-  text-align: center;
-  background-color: #dddddd;
-}
-.show {
-  display: block;
-  padding: 20px;
-  text-align: center;
-  background-color: #dddddd;
-}
-.w-form-fail {
+form-fail {
   display: none;
   margin-top: 10px;
   padding: 10px;
