--- a/css/ronald-jackson-creator-showcase.webflow.css
+++ b/css/ronald-jackson-creator-showcase.webflow.css
@@ -1,3 +1,4 @@
+
 .success {
   display: none;
   padding: 20px;
@@ -9,6 +10,9 @@
   padding: 20px;
   text-align: center;
   background-color: #dddddd;
+}
+.hide {
+  display:none !important;
 }
 
 .content_container {
@@ -72,12 +76,13 @@
 
 .story_container {
   position: relative;
-  overflow: auto;
-  height: 65%;
+  height:50%;
   border-style: solid;
   border-width: 1px;
   border-color: #707070;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .heading-2 {
@@ -93,7 +98,7 @@
 }
 
 .storylist {
-  height: 295px;
+
 }
 
 .list {
@@ -148,18 +153,13 @@
 }
 
 .form_container {
-  position: absolute;
-  left: 0px;
-  right: 0px;
-  bottom: 5px;
-  height: 50px;
-  padding-right: 10px;
-  padding-left: 10px;
+ margin-top:10px;
 }
 
 .story_list {
   overflow: scroll;
   height: 285px;
+  display: relative;
 }
 
 .form {
@@ -168,13 +168,13 @@
   display: -ms-flexbox;
   display: flex;
   height: 40px;
-  padding: 0px 10px;
+  padding: 0px 4px;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
   border: 1px solid #707070;
-  border-radius: 50px;
+  border-radius: 6px;
 }
 
 .text-field {
@@ -188,9 +188,11 @@
 }
 
 .submit-button {
-  width: 36px;
-  height: 36px;
-  border-radius: 100px;
+  width: 100px;
+  height: 32px;
+  border-radius: 4px;
+  margin-top:4px;
+  margin-bottom:4px;
 }
 
 .text-field-2 {
