--- a/css/webflow.css
+++ b/css/webflow.css
@@ -86,13 +86,15 @@ html.w-mod-touch * {
 }
 .w-button {
   display: inline-block;
-  padding: 9px 15px;
+  padding: 9px 15px 11px 15px;
   background-color: #3898EC;
   color: white;
   border: 0;
   text-decoration: none;
   cursor: pointer;
   border-radius: 0;
+  font-family: Ubuntu, Helvetica, sans-serif;
+  font-size: 14px;
 }
 input.w-button {
   -webkit-appearance: button;
