--- a/css/ronald-jackson-creator-showcase.webflow.css
+++ b/css/ronald-jackson-creator-showcase.webflow.css
@@ -76,7 +76,7 @@
 
 .story_container {
   position: relative;
-  height:35%;
+  height:50vh;
   border-style: solid;
   border-width: 1px;
   border-color: #707070;
